--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
   line-height: 1;
   opacity: 0.75;
   right: -5px;
-  color: #f00c0c !important;
+  color: #0e0d0d !important;
   border-radius: 50%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
